# wikinlp

./: README.md  pyproject.toml  setup.cfg  setup.py
src/trainds/: __init__.py  trainds.py
src/trainspm/: __init__.py  trainspm.py
src/wikicategories/: __init__.py  wikicategories.py
src/wikiextractor/: WikiExtractor.py  extract.py
src/wikiloader/: __init__.py  wikiloader.py
src/wikiloader/static/: wiki_markup_info.txt
src/wikinlp/: __init__.py  categories.py  downloader.py  run.py  trainds.py  trainspm.py  wikiloader.py
