[metadata]
name = wikiloader
version = 1.0.0
author = Aurelie Herbelot
author_email = aurelie@possible-worlds.xyz
description = Downloads and preprocess a Wikipedia in any language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://possible-worlds.xyz
project_urls =
    Docs = https://possible-worlds.xyz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

